<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FragmentListenerDemo</string>

    <string name="ivMainDescription">Beatles</string>
    <string name="textLabel">Cry For A Shadow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="exception_message">must implement OnFragmentInteractionListener</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>

    <string name="article1">Many a Beatle fanatic started down the outtake
        road,
        like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.</string>
    <string name="article2" tools:keep="@string/article2">At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).</string>
    <string name="tvFragmentTitle">DO YOU LIKE THIS?</string>
    <string name="rbnYes">Yes</string>
    <string name="rbnNO">No</string>

</resources>
