<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lnFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/my_fragment_color"
    android:orientation="horizontal"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/tvFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:lines="1"
        android:text="@string/tvFragmentTitle"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/rgFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbnYes" />

        <RadioButton
            android:id="@+id/rbnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbnNO" />
    </RadioGroup>
</LinearLayout>